--- a/wp-content/themes/nationswell/scss/partials/base/_story.scss
+++ b/wp-content/themes/nationswell/scss/partials/base/_story.scss
@@ -488,6 +488,7 @@
 
   .take-action__inner {
     overflow-y: scroll;
+    padding: 0 1.2rem;
 
     @include transition(all 0.3s ease-in-out);
   }
